# snapshot

./: .gitignore  Cargo.toml  README.md  message.txt  package-lock.json  package.json  pnpm-lock.yaml  test.ts  to-check.md  tsconfig.json  yielder.abi.json
.apibara/types/: apibara-config.d.ts
output/: sv1.json  sv2.json  v1.json  v2.json
snapshot/: BanegasFarmv1.json  BanegasFarmv2.json  Karathuru_undeployed.json  Karathuruv2.json  LasDelicias_old.json  LasDeliciasv1.json  LasDeliciasv2.json  ManjarisoBronzev1.json  ManjarisoSilverv1.json  Manjarisoav2.json
tonnes/: Banegas.json  Delicias.json  Karathuru.json  Manjarisoa.json
