[package]
name = "rust_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
clap_derive = "4.5.11"
lopdf = "0.33.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.120"
shellexpand = "3.1.0"
async-nats = "0.33"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
starknet = "0.12.0"


